<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/drawer_layout"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_constrainedHeight="false"
    tools:context=".MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar">

    </android.support.v7.widget.Toolbar>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/danger"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:onClick="danger"
            android:src="@drawable/danger_button" />


        <ImageButton
            android:id="@+id/safe"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:onClick="safe"
            android:scaleType="fitCenter"
            android:src="@drawable/safe_btn" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="122dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="update"
            android:text="@string/update_profile" />

        <Button
            android:id="@+id/complaint_box"
            android:layout_width="124dp"
            android:layout_height="wrap_content"
            android:onClick="complaint"
            android:layout_weight="1"
            android:text="@string/complaint_box" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/blog"
            android:layout_weight="1"
            android:onClick="blog"
            android:text="@string/blogs" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="58dp">

        <Button
            android:id="@+id/emgNum"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="emgNum"
            android:text="@string/emergency_numbers" />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rate_location" />
    </LinearLayout>


</LinearLayout>
    <android.support.design.widget.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:layout_gravity="start"
        app:menu="@menu/drawer_view"
        app:headerLayout="@layout/user_header"
        android:id="@+id/navView">

    </android.support.design.widget.NavigationView>
</android.support.v4.widget.DrawerLayout>